// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiValidator has the expected html structure 1`] = `
<tr
  class="data-table__row li-validator"
  data-moniker="mr_mounty"
>
  <td
    class="data-table__row__info"
  >
    <img
      class="
        data-table__row__info__image
        data-table__row__info__image--no-img
      "
      src="~assets/images/validator-icon.svg"
    />
     
    <div
      class="data-table__row__info__container"
    >
      <span
        class="data-table__row__info__container__status green"
      />
       
      <span
        class="data-table__row__info__container__name"
      >
        
        mr_mounty
      
      </span>
       
      <div
        class="data-table__row__info__container__description"
      >
        <bech32-stub
          address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
        />
      </div>
    </div>
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    1.40%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    5.00%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    98.78%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    13.00%
  
  </td>
</tr>
`;

exports[`LiValidator should display uptime as double-dash 1`] = `
<tr
  class="data-table__row li-validator"
  data-moniker="mr_mounty"
>
  <td
    class="data-table__row__info"
  >
    <img
      class="
        data-table__row__info__image
        data-table__row__info__image--no-img
      "
      src="~assets/images/validator-icon.svg"
    />
     
    <div
      class="data-table__row__info__container"
    >
      <span
        class="data-table__row__info__container__status green"
      />
       
      <span
        class="data-table__row__info__container__name"
      >
        
        mr_mounty
      
      </span>
       
      <div
        class="data-table__row__info__container__description"
      >
        <bech32-stub
          address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
        />
      </div>
    </div>
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    1.40%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    5.00%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    13.00%
  
  </td>
</tr>
`;

exports[`LiValidator works if user is not signed in 1`] = `
<tr
  class="data-table__row li-validator"
  data-moniker="mr_mounty"
>
  <td
    class="data-table__row__info"
  >
    <img
      class="
        data-table__row__info__image
        data-table__row__info__image--no-img
      "
      src="~assets/images/validator-icon.svg"
    />
     
    <div
      class="data-table__row__info__container"
    >
      <span
        class="data-table__row__info__container__status green"
      />
       
      <span
        class="data-table__row__info__container__name"
      >
        
        mr_mounty
      
      </span>
       
      <div
        class="data-table__row__info__container__description"
      >
        <bech32-stub
          address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
        />
      </div>
    </div>
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    --
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    1.40%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    5.00%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    98.78%
  
  </td>
   
  <td
    class="hide-xs"
  >
    
    13.00%
  
  </td>
</tr>
`;
